# patrimonio

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
.claude/: settings.local.json  settings.local.json.bak
.github/workflows/: backend-ci.yml  docker-build.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: assets.py  backtest.py  market_data.py  markowitz.py  monte_carlo.py  simulations.py
backend/app/core/: cache.py  config.py  database.py  exceptions.py
backend/app/models/: asset.py  historical_data.py  scenario.py
backend/app/schemas/: allocation.py  backtest.py  risk.py  simulation.py
backend/app/services/: backtester.py  inflation_adjuster.py  markowitz.py  monte_carlo.py  risk_metrics.py  simulator.py  tax_calculator.py
backend/app/services/data_fetchers/: bcb.py  yfinance_client.py
backend/app/utils/: dates.py  financial.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_monte_carlo.py  test_simulator.py  test_simulator_multiasset.py  test_tax_calculator.py
backend/tests/test_api/: test_endpoints.py
docs/: ARCHITECTURE.md  FINANCIAL_MATH.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/data/: portfolioTemplates.ts
frontend/src/hooks/: useSimulation.ts
frontend/src/lib/: api.ts  assets.ts  formatters.ts
frontend/src/pages/: BacktestPage.tsx  ComparePage.tsx  HomePage.tsx  LearnPage.tsx  MarkowitzPage.tsx  MonteCarloPage.tsx  SimulatorPage.tsx
frontend/src/types/: api.ts
(+18 files in other folders)
